Renaming 2scoreyumi to 3freecreditscores.info

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2scoreyumi",
+  "name": "3freecreditscores.info",
   "theme": "syntax",
   "version": "0.1.0",
   "description": "3freecreditscores.info ◄ Get Your FREE Credit Score 3freecreditscores.info, Check Your Credit For Free. Get My Credit Score For Free. Start Here Today",
